--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "type": "node",
-        "request": "attach",
-        "name": "Attach to VSSH Client",
-        "port": 9229,
-        "skipFiles": [
-            "<node_internals>/**"
-        ]
-    },
-
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to VSSH Client",
+            "port": 9229,
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
         {
             "type": "node",
             "request": "launch",
@@ -31,7 +30,7 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}\\vssh.js",
-            "args": ["127.0.0.1", "8329"]
+            "args": ["Rohit Kapoor", "DLT4TekMonks", "127.0.0.1"]
         }
     ]
 }
