--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}\\vssh.js",
-            "args": ["Test User", "Test password", "127.0.0.1"]
+            "args": ["Test User", "Test Password", "127.0.0.1"]
         }
     ]
 }
